--- a/style.css
+++ b/style.css
@@ -27,16 +27,17 @@ body {
     flex-direction: column; 
     align-items: center;
     justify-content: center;
+    margin-top: 1rem;
 }
 
 .container {
-    margin-top: 1rem;
+    margin: 0 auto;
     max-width: 360px;
 }
 
 .card {
     background-color: var(--white);
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
     padding: 18px;
     border-radius:17px;
     text-align: center;
