--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 .card {
     background-color: var(--white);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
-    padding: 18px;
+    padding: 15px 15px 15px 15px;
     border-radius:17px;
     text-align: center;
     margin: 0 1em;
